# hermes-hud

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PLAN-smooth-setup.md  README.md  collect.py  hermes-hud  hud.py  models.py  neofetch_ai.py  neofetch_anime.py  neofetch_base.py  neofetch_br.py  neofetch_fsociety.py  pyproject.toml  requirements.txt  snapshot.py
.github/: FUNDING.yml
collectors/: agents.py  config.py  corrections.py  cron.py  health.py  memory.py  projects.py  sessions.py  skills.py  timeline.py  utils.py
hermes_hud/: __init__.py  collect.py  hud.py  models.py  neofetch_ai.py  neofetch_anime.py  neofetch_base.py  neofetch_br.py  neofetch_fsociety.py  snapshot.py
hermes_hud/collectors/: agents.py  config.py  corrections.py  health.py  memory.py  profiles.py  sessions.py  skills.py  timeline.py  utils.py
hermes_hud/widgets/: __init__.py  agents_panel.py  boot_screen.py  corrections_panel.py  cron_panel.py  diff_panel.py  health_panel.py  memory_panel.py  overview.py  profiles_panel.py  projects_panel.py  sessions_panel.py  skills_panel.py  timeline_panel.py
tests/: conftest.py  test_collectors.py  test_env_vars.py  test_imports.py  test_integration.py  test_profiles.py  test_tmux.py
widgets/: agents_panel.py  boot_screen.py  corrections_panel.py  cron_panel.py  diff_panel.py  health_panel.py  memory_panel.py  overview.py  projects_panel.py  sessions_panel.py  skills_panel.py  timeline_panel.py
