[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-hud"
version = "0.4.0"
description = "Consciousness monitor for AI agents — interactive TUI dashboard"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors=[
    {name = "Joey Rodriguez"},
]
keywords = ["ai", "agent", "dashboard", "tui", "terminal", "neofetch", "hermes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "textual>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
neofetch = ["pyfiglet>=1.0"]

[project.urls]
Homepage = "https://github.com/joeynyc/hermes-hud"
Repository = "https://github.com/joeynyc/hermes-hud"
Issues = "https://github.com/joeynyc/hermes-hud/issues"

[project.scripts]
hermes-hud = "hermes_hud.hud:main"

[tool.setuptools.packages.find]
include = ["hermes_hud*"]
